--- a/style.css
+++ b/style.css
@@ -60,3 +60,28 @@ main {
 .hero-intro h1 {
   font-size: 3rem;
 }
+.hero-intro p {
+  padding: 0rem 3.5rem;
+  font-size: 1.5rem;
+  color: #9194a1;
+}
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.buttons button {
+  /* border: none; */
+  padding: 1.5rem 1.5rem;
+  font-size: 1.5rem;
+  color: #252b46;
+  font-weight: bold;
+  background: #f7f7f7;
+  border: none;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1), 0px 5px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.buttons button:hover {
+  color: white;
+  background-color: #5368df;
+}
